ACIC Coding Challenge Submit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/dashboard">Search</a>
   <a routerLink="/linesOfBusiness">View All Lines Of Business</a>
 </nav>
+<app-most-popular></app-most-popular>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
